# Rads-Quick-Viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-windows.ps1  generate-icon.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ui/: App.tsx
src/viewers/: registry.ts  types.ts
